kubernetes/canopy/stage/deployment.yaml
# genk8s:hash=ebe455ab3890d3f42c72e237da167ce9
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canopy
  labels:
    app: canopy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canopy
  template:
    metadata:
      labels:
        app: canopy
    spec:
      volumes:
      - name: canopy-nginx-config
        configMap:
          name: canopy-nginx
      - name: static-assets
        emptyDir: {}
      containers:
      - name: app
        imagePullPolicy: Always
        image: northamerica-northeast2-docker.pkg.dev/gpo-eng-stage/gpo/canopy:latest
      - name: nginx
        image: nginx:1.27-alpine
        volumeMounts:
        - name: canopy-nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: static-assets
          mountPath: /app/web
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
      serviceAccountName: canopy
