kubernetes/canopy/stage/httproute.yaml
# genk8s:hash=a5f0559c96f29275cefb8984ebea61b6
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: canopy
  namespace: canopy
  labels:
    gateway: gpogear
spec:
  # this connects us to the gateway
  parentRefs:
  - kind: Gateway
    name: gpotools
    namespace: gateway
    sectionName: tls-gear
  hostnames:
  - "canopy.gpogear.ca"
  rules:
  - matches:
    backendRefs:
    - name: canopy
      port: 8080
